force-app/main/default/objects/ATR_Question_Response__c/ATR_Question_Response__c.object-meta.xml
<CustomObject>
    <label>ATR Question Response</label>
    <nameField>
        <displayFormat>ATR QR {000000}</displayFormat>
        <label>ATR Question Response No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ATR Question Responses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>