force-app/main/default/objects/ATR_Question_Response__c/fields/ATR_Question__c.field-meta.xml
<CustomField>
    <fullName>ATR_Question__c</fullName>
    <label>ATR Question</label>
    <referenceTo>ATR_Question__c</referenceTo>
    <relationshipLabel>ATR Question Responses</relationshipLabel>
    <relationshipName>ATR_Question_Responses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>