force-app/main/default/objects/ATR_Question_Response__c/fields/ATR_Taken__c.field-meta.xml
<CustomField>
    <fullName>ATR_Taken__c</fullName>
    <label>ATR Taken</label>
    <referenceTo>ATR_Taken__c</referenceTo>
    <relationshipLabel>ATR Question Responses</relationshipLabel>
    <relationshipName>ATR_Question_Responses</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>