force-app/main/default/objects/ATR_Question_Response__c/fields/Response_Score__c.field-meta.xml
<CustomField>
    <fullName>Response_Score__c</fullName>
    <label>Response Score</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>